opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/ocaml-bimage"
doc: "https://zshipko.github.io/ocaml-bimage/doc"
license: "ISC"
dev-repo: "git+https://github.com/zshipko/ocaml-bimage.git"
bug-reports: "https://github.com/zshipko/ocaml-bimage/issues"
tags: ["image processing"]

depends:
[
    "ocaml" {>= "4.08.0"}
    "dune" {>= "2.0"}
    "bimage" {= version}
    "conf-openimageio"
]

build: [
    ["dune" "build" "-p" name "-j" jobs]
]

synopsis: """
Input/output for Bimage using OpenImageIO
"""

description: """
Input/output for Bimage using OpenImageIO
"""

available: os = "linux"
