opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/ocaml-bimage"
doc: "https://zshipko.github.io/ocaml-bimage/doc"
license: "ISC"
dev-repo: "git://github.com:zshipko/ocaml-bimage.git"
bug-reports: "https://github.com/zshipko/ocaml-bimage/issues"
tags: ["image processing" "gtk"]

depends:
[
    "dune" {build}
    "ocaml" {>= "4.03.0"}
    "bimage"
    "tsdl"
]

build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name] {with-test}
]


synopsis: """
bimage-gtk allows images to be displayed using SDL
"""

description: """
An image processing library for OCaml providing efficient, composable operations.
Additionally, bimage supports most types supported by Bigarray.
"""
