opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/bimage"
doc: "https://zshipko.github.io/ocaml-bimage/doc"
license: "ISC"
dev-repo: "git://github.com:zshipko/ocaml-bimage.git"
bug-reports: "https://github.com/zshipko/ocaml-bimage/issues"
tags: []

depends:
[
    "ocaml" {>= "4.03.0"}
    "dune" {build}
    "bimage"
    "z3"
]

build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name] {with-test}
]

